# codedebt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  test_file.rs
.github/workflows/: ci.yml  release.yml  security.yml
examples/: basic.rs
src/: error.rs  git.rs  interactive.rs  lib.rs  models.rs  patterns.rs  progress.rs  scanner.rs  watch.rs
