[package]
name = "codedebt"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["Jonathan Haas <jonathan@haasonsaas.com>"]
description = "Ultra-fast code debt detection library and CLI"
readme = "README.md"
homepage = "https://github.com/haasonsaas/codedebt"
repository = "https://github.com/haasonsaas/codedebt"
license = "MIT"
keywords = ["code", "debt", "todo", "fixme", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codedebt"
path = "src/bin/main.rs"

[dependencies]
rayon = "1.8"
regex = "1.10"
walkdir = "2.4"
ignore = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "codedebt"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true

[profile.test]
debug = true